--- a/physx/snippets/compiler/cmake/linux/CMakeLists.txt
+++ b/physx/snippets/compiler/cmake/linux/CMakeLists.txt
@@ -53,7 +53,7 @@ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
 # Include all of the projects
 SET(PLATFORM_SNIPPETS_LIST Convert LoadCollection)
 
-IF(${CMAKE_LIBRARY_ARCHITECTURE} STREQUAL "aarch64-linux-gnu")
+IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
 	SET(SNIPPET_RENDER_ENABLED 0)
 ELSE()
 	SET(SNIPPET_RENDER_ENABLED 1)
