--- a/physx/source/compiler/cmake/windows/CMakeLists.txt
+++ b/physx/source/compiler/cmake/windows/CMakeLists.txt
@@ -195,11 +195,12 @@ ELSE()
 		EXPORT PhysX
 		DESTINATION $<$<CONFIG:debug>:${PX_ROOT_LIB_DIR}/debug>$<$<CONFIG:release>:${PX_ROOT_LIB_DIR}/release>$<$<CONFIG:checked>:${PX_ROOT_LIB_DIR}/checked>$<$<CONFIG:profile>:${PX_ROOT_LIB_DIR}/profile>	
 		)
-	# export to the build tree
-	export( TARGETS ${PHYSXDISTRO_LIBS}
-		NAMESPACE PhysX::
-		APPEND FILE ${physx_build_targets_file})
-	
+	if(DEFINED ${physx_build_targets_file})
+		# export to the build tree
+		export( TARGETS ${PHYSXDISTRO_LIBS}
+			NAMESPACE PhysX::
+			APPEND FILE ${physx_build_targets_file})
+	endif()
 ENDIF()
 
 IF(PX_GENERATE_STATIC_LIBRARIES)
